--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
 <head>
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta http-equiv="Cache-Control" content="private" />
-    <meta http-equiv="Expires" content="86400000" />
-    <meta http-equiv="Cache-Control" content="max-age=86400000" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
 
@@ -33,7 +25,7 @@
                     <p class="h1"><span class="font-weight-bold">WITHOUT</span> EXAM</p>
                 </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler m-2" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="text-light"></span><i class="fas fa-bars fa-3x" style="color:white;"></i>></i></span>
                 </button>
@@ -67,7 +59,7 @@
                 </div>
             </nav>
 
-            <div class="container-fluid ">
+            <div class="container-fluid mt-5">
                 <div class="row">
                     <div class="col text-center text-light  p-5">
                         <div class="p-5 m-5 ">
