--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 +1 740-306-2240</span></p>
         <div class="bg-image ">
             <nav class="navbar navbar-expand-lg navbar-light  transparent col px-5  py-4 w-100 mb-5">
-                <a class=" navbar-brand text-light p-5 mt-5" href="index.html">
+                <a class=" navbar-brand text-light" href="index.html">
                     <p class="h1"><span class="font-weight-bold">BUY</span> IELTS</p>
                     <p class="h1"><span class="font-weight-bold">WITHOUT</span> EXAM</p>
                 </a>
@@ -62,7 +62,7 @@
             <div class="container-fluid mt-5">
                 <div class="row">
                     <div class="col text-center text-light  p-5">
-                        <div class="p-5 m-5 ">
+                        <div class="p-5 ">
                             <p class="h1 font-weight-bold pb-3">BUY IELTS CERTIFICATE ONLINE </p>
                             <p class="">WITHOUT EXAMS</p>
                         </div>
