--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -17,7 +18,7 @@
 <body>
     <header class="mb-0">
         <p class="bg-success text-center text-light my-0"><i class="fab fa-whatsapp mr-2"></i><span class="h6">Whatsapp
-                +1 740-306-2240</span></p>
+                +1-740-306-2240</span></p>
         <div class="bg-image ">
             <nav class="navbar navbar-expand-lg navbar-light  transparent col px-5  py-4 w-100 mb-5">
                 <a class=" navbar-brand text-light" href="index.html">
@@ -25,9 +26,9 @@
                     <p class="h1"><span class="font-weight-bold">WITHOUT</span> EXAM</p>
                 </a>
 
-                <button class="navbar-toggler m-2" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="text-light"></span><i class="fas fa-bars fa-3x" style="color:white;"></i>></i></span>
+                    <span><i class="fas fa-bars fa-3x" style="color:white;"></i></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end py-2" id="navbarNav">
                     <ul class="navbar-nav">
@@ -62,14 +63,14 @@
             <div class="container-fluid mt-5">
                 <div class="row">
                     <div class="col text-center text-light  p-5">
-                        <div class="p-5 ">
+                        <div class="py-5 ">
                             <p class="h1 font-weight-bold pb-3">BUY IELTS CERTIFICATE ONLINE </p>
                             <p class="">WITHOUT EXAMS</p>
                         </div>
                         <div class="px-5 mb-5 ">
                             <button class="btn btn-lg  btn-success rounded py-2 px-4 mx-2 mb-2">
                                 <i class="fab fa-whatsapp mr-2"></i>
-                                <span class="h6">+1 740-306-2240</span>
+                                <span class="h6">+1-740-306-2240</span>
                             </button>
                             <button class="btn btn-lg  btn-primary rounded py-2 px-4 mx-2 mb-2">
                                 <i class="fas fa-envelope mr-2"></i>
