--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
     <header class="mb-0">
-        <p class="bg-success text-center text-light my-0"><i class="fab fa-whatsapp mr-2"></i><span class="h6">Whatsapp
+        <p class="bg-success text-center text-light my-0"><i class="fab fa-whatsapp fa-lg mr-2"></i><span
+                class="h6">Whatsapp
                 +1-740-306-2240</span></p>
         <div class="bg-image ">
             <nav class="navbar navbar-expand-lg navbar-light  transparent col px-5  py-4 w-100 mb-5">
@@ -28,7 +29,7 @@
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><i class="fas fa-bars fa-3x" style="color:white;"></i></span>
+                    <span><i class="fas fa-bars fa-2x" style="color:white;"></i></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end py-2" id="navbarNav">
                     <ul class="navbar-nav">
@@ -60,21 +61,21 @@
                 </div>
             </nav>
 
-            <div class="container-fluid mt-5">
+            <div class="container-fluid ">
                 <div class="row">
                     <div class="col text-center text-light  p-5">
                         <div class="py-5 ">
                             <p class="h1 font-weight-bold pb-3">BUY IELTS CERTIFICATE ONLINE </p>
                             <p class="">WITHOUT EXAMS</p>
                         </div>
-                        <div class="px-5 mb-5 ">
-                            <button class="btn btn-lg  btn-success rounded py-2 px-4 mx-2 mb-2">
-                                <i class="fab fa-whatsapp mr-2"></i>
-                                <span class="h6">+1-740-306-2240</span>
+                        <div class="px-2 mb-5 ">
+                            <button class="btn btn-lg  btn-success rounded  mx-2 mb-2">
+                                <i class="fab fa-whatsapp fa-lg mr-1"></i>
+                                <span class="h5">+1-740-306-2240</span>
                             </button>
-                            <button class="btn btn-lg  btn-primary rounded py-2 px-4 mx-2 mb-2">
-                                <i class="fas fa-envelope mr-2"></i>
-                                <span class="h6">dummy@ielts.com</span>
+                            <button class="btn btn-lg  btn-primary rounded  mx-2 mb-2">
+                                <i class="fas fa-envelope fa-lg mr-1"></i>
+                                <span class="h5">dummy@ielts.com</span>
                             </button>
                         </div>
                     </div>
