--- a/index.html
+++ b/index.html
@@ -172,7 +172,239 @@
         </div>
     </div>
 
+    <div class="container-fluid bg-primary darken p-5">
+        <div class="row">
+            <div class="col-md-6">
+                <p class="h2 text-white ">Get in touch</p>
+            </div>
+            <div class="col-md-6 text-center">
+                <button class=" btn btn-outline-light btn-lg rounded-pill py-2 px-5  ">CONTACT US</button>
+            </div>
+        </div>
+    </div>
 
+    <div class="bg-light">
+        <div class="container p-5">
+            <div class="row">
+                <div class="col-md-6 ">
+                    <img src="img/img2.jpg" class="img-fluid pb-3">
+                    <div class="py-2">
+                        <a class="btn btn-lg  btn-success rounded  mx-2 mb-2 text-light">
+                            <i class="fab fa-whatsapp fa-lg mr-1"></i>
+                            <span class="h5">+1-740-306-2240</span>
+                        </a>
+                        <a class="btn btn-lg  btn-primary rounded  mx-2 mb-2 text-light">
+                            <i class="fas fa-envelope fa-lg mr-1"></i>
+                            <span class="h5">dummy@ielts.com</span>
+                        </a>
+                    </div>
+                    <img src="img/img3.jpg" class="img-fluid pb-3">
+                </div>
+
+                <div class="col-md-6 ">
+                    <p class="h2 pb-4">Make your success a priority</p>
+                    <p class="pb-2">Buy IELTS, TOEFL, ESOL AUTODESK CERTIFICATES, Dubai Passport IELTS, TOEFL, ESOL
+                        AUTODESK CERTIFICATES with the British Council.</p>
+                    <p class="pb-2">How Do I Trust? We are the largest in online certifications that we provide our
+                        customers with certificates valid in many courses. </p>
+
+                    <img src="img/img4.jpg" class="img-fluid pb-3">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-light p-5">
+        <div class="container-fluid">
+
+            <p class="h4 text-center pb-5">BUY IELTS CERTIFICATE ONLINE | IELTS CERTIFICATE WITHOUT EXAMS</p>
+            <div class="row pb-5">
+                <div class="col-md-6">
+                    <img src="img/img6.jpg" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                    <p class="pb-5">Buy REAL and REGISTERED IELTS Certificate without need to take the exam or test.
+                        With
+                        our
+                        help,
+                        you
+                        can be able to get an ORIGINAL and GENUINE IELTS CERTIFICATE without facing the stress and
+                        trauma of
+                        the
+                        Exam. The IELTS CERTIFICATE we issue carries a score of your choosing and you will be able to
+                        verify
+                        it
+                        online using the ORIGINAL IELTS TRF.</p>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="">
+                                Fake Passport For Sale | Buy Real Nebosh Certificate | Buy Fake Certificates Online |
+                                Buy
+                                Fake Birth
+                                Certificate Online | Buy Fake Degree Certificate Online | Fake Diploma Certificate | Buy
+                                CELPIP
+                                Certificate | Get Verified PTE | GMAT Certificates |</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="">Buy Real Visa Online | Buy Nebosh IGC123 Without Test | Buy Real Documents
+                                Online |
+                                Buy Fake Death Certificate Online | Buy A Degree Certificate | Buy Ielts Certificate
+                                Online
+                                | Buy
+                                CELPIP
+                                Certificate Without Exam | CELPIP</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row text-center my-5">
+                <div class="col-md-4 bg-primary darken border border-light">
+                    <h5 class="text-white p-5">Work Permits</h5>
+                    <p class="px-5 text-white"> Do you want to work, study, visit, travel through or live
+                        permanently
+                        in Canada, Australia, USA, United Kingdom or New Zealand?</p>
+                    <button class=" btn btn-outline-light rounded py-2 px-5 my-3 ">CONTACT US</button>
+                </div>
+
+                <div class="col-md-4 bg-primary darken border border-light">
+                    <h5 class="text-white p-5">Driver’s License</h5>
+                    <p class="px-5 text-white"> We guarantee you a New Identity (passport, SSN,
+                        driver’s license, I.D, Birth certificate, diploma) starting from a clean new Genuine Birth
+                        Certificate, ID card</p>
+                    <button class=" btn btn-outline-light rounded py-2 px-5 my-3 ">CONTACT US</button>
+                </div>
+
+                <div class="col-md-4 bg-primary darken border border-light">
+                    <h5 class="text-white p-5">Second passport & Visas</h5>
+                    <p class="px-5 text-white"> We produce Just Real Visa. This real Visa is
+                        legal and you shall legally use it to travel to the Country that it is issued from.</p>
+                    <button class=" btn btn-outline-light rounded py-2 px-5 my-3 ">CONTACT US</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-image-2">
+        <div class="container-fluid mb-5">
+
+            <div class="row p-5 text-center text-justify text-white">
+                <div class="col-md-4 mb-2">
+                    <div class="stats">
+                        <p>IELTS
+                            <p> CERTIFICATES</p>
+                            <p> DELIVERED</p>
+                            <p>1448</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-2">
+                    <div class="stats">
+
+                        <p>LICENSES</p>
+                        <p>REGISTERED</p>
+                        <p>1259</p>
+
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-2">
+                    <div class="stats">
+
+                        <p> CERTIFICATES</p>
+                        <p> PROCESSED</p>
+                        <p> 1193</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-white">
+        <div class="py-5 text-center">
+            <a class="btn btn-lg  btn-success rounded  mx-2 mb-2 text-light">
+                <i class="fab fa-whatsapp fa-lg mr-1"></i>
+                <span class="h5">+1-740-306-2240</span>
+            </a>
+            <a class="btn btn-lg  btn-primary rounded  mx-2 mb-2 text-light">
+                <i class="fas fa-envelope fa-lg mr-1"></i>
+                <span class="h5">dummy@ielts.com</span>
+            </a>
+        </div>
+        <div class="container">
+            <div class="row py-5 px-0 ">
+                <div class="col-md-4 pb-2">
+                    <div class="card rounded">
+                        <img src="img/img7.jpg" class="card-img-top">
+                        <div class="card-body  text-justify py-5">
+                            <h5 class="card-title font-weight-bold">PARTNER</h5>
+                            <p class="card-text ">Our organization is well connected with various invigilators, British
+                                council / IDP database managers and test centres, which enables us to register your
+                                scores in any IELTS centre around the world. All our certificates are original and
+                                British Council certified.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 pb-2">
+                    <div class="card rounded">
+                        <img src="img/img8.jpg" class="card-img-top">
+                        <div class="card-body  text-justify py-5">
+                            <h5 class="card-title font-weight-bold">REGISTERED CERTIFICATE</h5>
+                            <p class="card-text ">Signup for registered British Council and IDP certificates without
+                                sitting for any exams, The certificate is registered and can be verified online, you can
+                                use this certificate for University admission and any immigration use</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 pb-2">
+                    <div class="card rounded">
+                        <img src="img/img9.jpg" class="card-img-top">
+                        <div class="card-body  text-justify py-5">
+                            <h5 class="card-title font-weight-bold">IELTS PROVIDER</h5>
+                            <p class="card-text ">The regions we cover are UAE, Qatar, Oman, Saudi Arabia, Kuwait,
+                                Bahrain, Jordan, Australia, Asia, (UK), Canada, South America and Europe. Because the
+                                business is risky, very little information is provided to the public and details of the
+                                certificates are only provided to paying clients.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-white  p-5">
+        <div class="row">
+            <img class="col-2" src="img/img10.jpg">
+            <img class="col-2" src="img/img11.jpg">
+            <img class="col-2" src="img/img12.jpg">
+            <img class="col-2" src="img/img13.jpg">
+            <img class="col-2" src="img/img14.jpg">
+            <img class="col-2" src="img/img15.jpg">
+
+        </div>
+    </div>
+
+    <div class="bg-image">
+        <div class="container text-center p-5">
+            <p class="h1 p-2 text-white">Book Now</p>
+            <form class="bg-light p-5 ">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+
+
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
