--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="mb-0">
         <p class="bg-success text-center text-light my-0"><i class="fab fa-whatsapp fa-lg mr-2"></i><span
                 class="h6">Whatsapp
-                +1-740-306-2240</span></p>
+                +1(740)306-2240</span></p>
         <div class="bg-image ">
             <nav class="navbar navbar-expand-lg navbar-light  transparent col px-5  py-4 w-100 mb-5">
                 <a class=" navbar-brand text-light" href="index.html">
@@ -68,7 +68,7 @@
                         <div class="px-2 mb-5 ">
                             <a class="btn btn-lg  btn-success rounded  mx-2 mb-2">
                                 <i class="fab fa-whatsapp fa-lg mr-1"></i>
-                                <span class="h5">+1-740-306-2240</span>
+                                <span class="h5">+1(740)306-2240</span>
                             </a>
                             <a class="btn btn-lg  btn-primary rounded  mx-2 mb-2">
                                 <i class="fas fa-envelope fa-lg mr-1"></i>
@@ -155,7 +155,7 @@
                     for global migration and higher education. </p>
                 <a class="btn btn-lg  btn-success rounded  my-2 text-white">
                     <i class="fab fa-whatsapp fa-lg mr-1"></i>
-                    <span class="h5 ">+1-740-306-2240</span>
+                    <span class="h5 ">+1(740)306-2240</span>
                 </a>
             </div>
             <div class="col-md-6 p-5">
@@ -191,7 +191,7 @@
                     <div class="py-2">
                         <a class="btn btn-lg  btn-success rounded  mx-2 mb-2 text-light">
                             <i class="fab fa-whatsapp fa-lg mr-1"></i>
-                            <span class="h5">+1-740-306-2240</span>
+                            <span class="h5">+1(740)306-2240</span>
                         </a>
                         <a class="btn btn-lg  btn-primary rounded  mx-2 mb-2 text-light">
                             <i class="fas fa-envelope fa-lg mr-1"></i>
@@ -325,7 +325,7 @@
         <div class="py-5 text-center">
             <a class="btn btn-lg  btn-success rounded  mx-2 mb-2 text-light">
                 <i class="fab fa-whatsapp fa-lg mr-1"></i>
-                <span class="h5">+1-740-306-2240</span>
+                <span class="h5">+1(740)306-2240</span>
             </a>
             <a class="btn btn-lg  btn-primary rounded  mx-2 mb-2 text-light">
                 <i class="fas fa-envelope fa-lg mr-1"></i>
@@ -387,25 +387,146 @@
         </div>
     </div>
 
-    <div class="bg-image">
+    <div class="bg-image-2">
         <div class="container text-center p-5">
-            <p class="h1 p-2 text-white">Book Now</p>
-            <form class="bg-light p-5 ">
+            <p class="h1 p-5 text-white">Book Now</p>
+            <form method="post" action="" class="bg-light p-5 ">
+                <div class="form-group ">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="name@example.com">
+                    <label for="email">email</label>
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="subject">Subject</label>
+                    <input type="email" class="form-control" id="subject" placeholder="I need a ">
                 </div>
 
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea class="form-control" id="message" rows="6"></textarea>
+                </div>
 
                 <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Example textarea</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
                 </div>
             </form>
         </div>
     </div>
 
+    <div class="bg-light text-center  p-5">
+        <p class="h2 p-5">How Can I Buy IELTS Without Exam</p>
+        <p class="text-justify">You start by placing an order with us. To place an order to buy ielts without exam,
+            kindly
+            contact
+            us via the Contact form or send us a direct Whatsapp +1(740)306-2240 or email
+            dummy@example.com . Once we receive your email , we are going to send you an in return containing
+            all information we are going to need from you,as soon as you get back to us with this information we are
+            going to give you our payment address for you to send the money so that we can start producing your
+            certifica te.Once payment is confirmed from you we will start immediately with the production of your
+            certificate. As soon as we produce your certificate we aregoing to send all your details to our inside man
+            who is part of our team but Specialist in database infiltration, He will infiltarte the needed data base and
+            put your full details online, As soon as he does that we are going to email you the login credentials that
+            you will use to check your results online</p>
+
+        <a class="btn btn-lg  btn-success rounded  mx-2 my-2 text-light">
+            <i class="fab fa-whatsapp fa-lg mr-1"></i>
+            <span class="h5">+1(740)306-2240</span>
+        </a>
+        <p class="h2 p-5">Buy IELTS certificate online Without Exam and </p>
+        <p class="text-justify">Buy Genuine IELTS Certificate Without Exam| Registered IELTS Certificate for sale We can
+            help you register IELTS without sitting down for one Exam. It will help you save precious years! And time.
+            It will only take 5 days to get your IELTS certificate ready And delivered to your address. Express service
+            is required, we can Make the certificate in 2 days for a ride. The certified service surcharge will be
+            original and Registered in the database and can be verified. After your order is The insertion takes a few
+            days for us to get your details System, Once your data is registered in the system it will be inserted IELTS
+            sites / systems, and will appear real, legitimate and verifiable Forever </p>
+        <p class=" text-justify py-5">Are you looking for buy ielts certificate without exam? Well, your search has made
+            you land on
+            the right page! We are a renowned provider of ielts certificates without exam. The ielts or the
+            international english language test is the most popular english language proficiency test of the world for
+            global migration and higher education. It assesses all your english skills including listening, writing,
+            reading and speaking. The aim of this test is to make sure that you don’t have any problem communicating in
+            your new life abroad. However, this test can be quite difficult to pass, especially for those who do not
+            come from an english background. And this is exactly where ielts certificate comes into the picture! Excited
+            to know more about us? Those interested in getting their MCSE, CCNA, MCITP, CCNP, MCTS, MCSE Certification
+            can now easily get their certificates without Sweat and tiredness. We do not need to travel to other places
+            or take Try online to get our IT exams. We can get ours Certifications from where we are. We can get our IT
+            certification It will take our career to the next level or get our dream jobs Faster. </p>
+
+        <div class="py-2">
+            <a class="btn btn-lg  btn-success rounded  mx-2 mb-2 text-light">
+                <i class="fab fa-whatsapp fa-lg mr-1"></i>
+                <span class="h5">+1(740)306-2240</span>
+            </a>
+            <a class="btn btn-lg  btn-primary rounded  mx-2 mb-2 text-light">
+                <i class="fas fa-envelope fa-lg mr-1"></i>
+                <span class="h5">dummy@ielts.com</span>
+            </a>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-white">
+        <img src="img/img20.png" class="p-5 card-img-top">
+    </div>
+
+
+    <div class="container-fluid bg-dark text-light text-center mb-2">
+        <div class="row">
+            <div class="col-md-3">
+                <p class="">
+                    <i class="fab fa-whatsapp fa-2x  pt-5 px-5"></i>
+                </p>
+                <p class="h6 pt-2 px-5 pb-5"> +1(740)306-2240</p>
+            </div>
+
+            <div class="col-md-3">
+                <p class="">
+                    <i class="fas fa-envelope fa-2x  pt-5 px-5"></i>
+                </p>
+                <p class="h6 pt-2 px-5 pb-5">dummy@example.com</p>
+            </div>
+
+            <div class="col-md-3 ">
+                <p class="">
+                    <i class="fas fa-phone fa-2x  pt-5 px-5"></i>
+                </p>
+                <p class="h6 pt-2 px-5 pb-5"> +1(740)306-2240</p>
+            </div>
+
+            <div class="col-md-3 bg-info darken">
+                <p class=" pt-5 px-5">
+
+                    <a class="fb-ic">
+                        <i class="fab fa-facebook-f white-text mr-4"> </i>
+                    </a>
+                    <!-- Twitter -->
+                    <a class="tw-ic">
+                        <i class="fab fa-twitter white-text mr-4"> </i>
+                    </a>
+                    <!-- Google +-->
+                    <a class="gplus-ic">
+                        <i class="fab fa-google-plus-g white-text mr-4"> </i>
+                    </a>
+                    <!--Linkedin -->
+                    <a class="li-ic">
+                        <i class="fab fa-linkedin-in white-text mr-4"> </i>
+                    </a>
+                    <!--Instagram-->
+                    <a class="ins-ic">
+                        <i class="fab fa-instagram white-text"> </i>
+                    </a>
+
+                </p>
+                <p class="h6 pt-2 ">
+                    &copy 2020
+                </p>
+                <p class="">sitename.com</p>
+            </div>
+        </div>
+    </div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
