--- a/index.html
+++ b/index.html
@@ -533,6 +533,9 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-56679422-e6c9-4589-ad3d-0ce39c661d8f"></div>
+
 
 </body>
 
