--- a/index.html
+++ b/index.html
@@ -473,62 +473,61 @@
         <img src="img/img20.png" class="p-5 card-img-top">
     </div>
 
-    <footer>
-        <div class="container-fluid bg-dark text-light text-center mb-2">
-            <div class="row">
-                <div class="col-md-3">
-                    <p class="">
-                        <i class="fab fa-whatsapp fa-2x  pt-5 px-5"></i>
-                    </p>
-                    <p class="h6 pt-2 px-5 pb-5"> +1(740)306-2240</p>
-                </div>
+    <footer class="container-fluid bg-dark text-light text-center mb-2">
+        <div class="row">
+            <div class="col-md-3">
+                <p class="">
+                    <i class="fab fa-whatsapp fa-2x  pt-5 px-5"></i>
+                </p>
+                <p class="h6 pt-2 px-5 pb-5"> +1(740)306-2240</p>
+            </div>
 
-                <div class="col-md-3">
-                    <p class="">
-                        <i class="fas fa-envelope fa-2x  pt-5 px-5"></i>
-                    </p>
-                    <p class="h6 pt-2 px-5 pb-5">dummy@example.com</p>
-                </div>
+            <div class="col-md-3">
+                <p class="">
+                    <i class="fas fa-envelope fa-2x  pt-5 px-5"></i>
+                </p>
+                <p class="h6 pt-2 px-5 pb-5">dummy@example.com</p>
+            </div>
 
-                <div class="col-md-3 ">
-                    <p class="">
-                        <i class="fas fa-phone fa-2x  pt-5 px-5"></i>
-                    </p>
-                    <p class="h6 pt-2 px-5 pb-5"> +1(740)306-2240</p>
-                </div>
+            <div class="col-md-3 ">
+                <p class="">
+                    <i class="fas fa-phone fa-2x  pt-5 px-5"></i>
+                </p>
+                <p class="h6 pt-2 px-5 pb-5"> +1(740)306-2240</p>
+            </div>
 
-                <div class="col-md-3 bg-info darken">
-                    <p class=" pt-5 px-5">
+            <div class="col-md-3 bg-info darken">
+                <p class=" pt-5 px-5">
 
-                        <a class="fb-ic">
-                            <i class="fab fa-facebook-f white-text mr-4"> </i>
-                        </a>
-                        <!-- Twitter -->
-                        <a class="tw-ic">
-                            <i class="fab fa-twitter white-text mr-4"> </i>
-                        </a>
-                        <!-- Google +-->
-                        <a class="gplus-ic">
-                            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-                        </a>
-                        <!--Linkedin -->
-                        <a class="li-ic">
-                            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-                        </a>
-                        <!--Instagram-->
-                        <a class="ins-ic">
-                            <i class="fab fa-instagram white-text"> </i>
-                        </a>
+                    <a class="fb-ic">
+                        <i class="fab fa-facebook-f white-text mr-4"> </i>
+                    </a>
+                    <!-- Twitter -->
+                    <a class="tw-ic">
+                        <i class="fab fa-twitter white-text mr-4"> </i>
+                    </a>
+                    <!-- Google +-->
+                    <a class="gplus-ic">
+                        <i class="fab fa-google-plus-g white-text mr-4"> </i>
+                    </a>
+                    <!--Linkedin -->
+                    <a class="li-ic">
+                        <i class="fab fa-linkedin-in white-text mr-4"> </i>
+                    </a>
+                    <!--Instagram-->
+                    <a class="ins-ic">
+                        <i class="fab fa-instagram white-text"> </i>
+                    </a>
 
-                    </p>
-                    <p class="h6 pt-2 ">
-                        &copy 2020
-                    </p>
-                    <p class="">sitename.com</p>
-                </div>
+                </p>
+                <p class="h6 pt-2 ">
+                    &copy 2020
+                </p>
+                <p class="">sitename.com</p>
             </div>
         </div>
     </footer>
+
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
