--- a/services/index.html
+++ b/services/index.html
@@ -9,7 +9,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link href="../css/main.css" rel="stylesheet" />
 
-    <title>IELTS-Services</title>
+    <title>IELTS-Catalog</title>
 </head>
 
 <body>
@@ -41,24 +41,25 @@
                             <a class="nav-link pb-3 " href="../blog">BLOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 " href="../contact/">CONTACT></a>
+                            <a class="nav-link pb-3" href="../contact">CONTACT</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 " href="">FAQ</a>
+                            <a class="nav-link pb-3" href="../FAQ">FAQ</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 border-bottom border-light active" href="../services">SERVICES<span
+                            <a class="nav-link pb-3" href="../services">SERVICES</a>
+                        </li>
+                        <li class="nav-item mx-2 ">
+                            <a class="nav-link pb-3  " href="">OUR CATALOG</a>
+                        </li>
+                        <li class="nav-item mx-2 ">
+                            <a class="nav-link pb-3 border-bottom border-light active" href="../privacy">PRIVACY<span
                                     class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 " href="">OUR CATALOG</a>
-                        </li>
-                        <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 " href="../privacy/">PRIVACY</a>
                         </li>
                     </ul>
                 </div>
             </nav>
+
             <div class="container-fluid ">
                 <div class="row">
                     <div class="col text-center text-light  p-5">
