--- a/about/index.html
+++ b/about/index.html
@@ -215,7 +215,7 @@
 
             <h3 class="font-weight-bold text-justify py-2">I Registered for the exams,Can i still order from you guys?
             </h3>
-            <p class="text-justify py-2 text-dark">Yes, you can stil order from us and you will need to write the exams
+            <p class="text-justify py-2">Yes, you can stil order from us and you will need to write the exams
                 if you
                 have already registered but you have nothing nothing to worry about no matter the out come of your
                 results we are going to provide you a new certificate with your required grades and those same
