--- a/contact/index.html
+++ b/contact/index.html
@@ -66,8 +66,7 @@
                 <div class="row">
                     <div class="col text-center text-light  p-5">
                         <div class="py-5 ">
-                            <p class="h1 font-weight-bold pb-3">BUY IELTS CERTIFICATE ONLINE </p>
-                            <p class="">WITHOUT EXAMS</p>
+                            <p class="display-3 font-weight-bold pb-3 text-darken ">Contact Us </p>
                         </div>
                         <div class="px-2 mb-5 ">
                             <a class="btn btn-lg  btn-success rounded  mx-2 mb-2">
