--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -43,7 +43,7 @@
                             <a class="nav-link py-4 " href="../blog">BLOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="../contact/">CONTACT></a>
+                            <a class="nav-link py-4 " href="../contact/">CONTACT</a>
                         </li>
                         <li class="nav-item mx-2 ">
                             <a class="nav-link py-4 border-bottom border-light active" href="">FAQ<span
