--- a/contact/index.html
+++ b/contact/index.html
@@ -85,6 +85,36 @@
 
     </header>
 
+    <div class="bg-light darken p-3">
+        <div class="bg-form ">
+            <div class="container text-center p-5">
+                <form method="post" action="" class="bg-light p-5 main-form rounded-lg">
+                    <div class="form-group ">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="John Doe">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">email</label>
+                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input type="email" class="form-control" id="subject" placeholder="I need a ">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" rows="6"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer class="container-fluid bg-dark text-light text-center ">
         <div class="row">
             <div class="col-md-3">
