--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
     <div class="bg-image-2">
         <div class="container text-center p-5">
             <p class="h1 p-5 text-white">Book Now</p>
-            <form method="post" action="" class="bg-light p-5 ">
+            <form method="post" action="" class="bg-light p-5 main-form rounded-lg">
                 <div class="form-group ">
                     <label for="name">Name</label>
                     <input type="text" class="form-control" id="name" placeholder="John Doe">
