--- a/services/index.html
+++ b/services/index.html
@@ -85,6 +85,44 @@
 
     </header>
 
+
+    <div class="bg-light table-responsive text-center">
+        <h2 class="font-weight-bold text-justify py-5 text-center">Our Services</h2>
+        <table class="table table-borderless">
+            <tbody>
+                <tr>
+                    <td><button class=" rounded-lg btn btn-primary p-5">IELTS</button></td>
+                    <td><button class=" rounded-lg btn btn-info p-5">TOEFL</button></td>
+                </tr>
+                <tr>
+                    <td><button class=" rounded-lg btn btn-danger p-5">TOEIC</button></td>
+                    <td><button class=" rounded-lg btn btn-warning p-5">CCNA</button></td>
+                </tr>
+                <tr>
+                    <td><button class=" rounded-lg btn btn-danger p-5">MCSE</button></td>
+                    <td><button class=" rounded-lg btn btn-warning p-5">MCITP</button></td>
+                </tr>
+                <tr>
+                    <td><button class=" rounded-lg btn btn-primary p-5">CCNP</button></td>
+                    <td><button class=" rounded-lg btn btn-info p-5">MCTS</button></td>
+
+                </tr>
+                <tr>
+                    <td><button class=" rounded-lg btn btn-warning p-5">PET</button></td>
+                    <td><button class=" rounded-lg btn btn-danger p-5">FCE</button></td>
+                </tr>
+                <tr>
+                    <td><button class=" rounded-lg btn btn-info p-5">KET</button></td>
+                    <td><button class=" rounded-lg btn btn-primary p-5">ILEC</button></td>
+                </tr>
+                <tr>
+                    <td><button class=" rounded-lg btn btn-info p-5">CPE</button></td>
+                    <td><button class=" rounded-lg btn btn-primary p-5"> YLE</button></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
     <footer class="container-fluid bg-dark text-light text-center ">
         <div class="row">
             <div class="col-md-3">
