--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -53,7 +53,7 @@
                             <a class="nav-link py-4" href="../services">SERVICES</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="../services/">OUR CATALOG</a>
+                            <a class="nav-link py-4 " href="../catalog/">OUR CATALOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
                             <a class="nav-link py-4 " href="">PRIVACY POLICY</a>
