--- a/catalog/index.html
+++ b/catalog/index.html
@@ -84,6 +84,185 @@
         </div>
 
     </header>
+    <div class="bg-light p-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-3">
+                    <div class="nav flex-column nav-pills  darken font-weight-bold" id="v-pills-tab" role="tablist"
+                        aria-orientation="vertical">
+                        <a class="nav-link p-3 border-bottom border-light active" id="v-pills-home-tab"
+                            data-toggle="pill" href="#tab-1" role="tab" aria-controls="tab-1"
+                            aria-selected="true">IELTS</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-2-tab" data-toggle="pill"
+                            href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">TOEFL</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-3-tab" data-toggle="pill"
+                            href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">TOEIC</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-4-tab" data-toggle="pill"
+                            href="#tab-4" role="tab" aria-controls="tab-4" aria-selected="false">CCNA</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-5-tab" data-toggle="pill"
+                            href="#tab-5" role="tab" aria-controls="tab-5" aria-selected="false">MCSE</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-6-tab" data-toggle="pill"
+                            href="#tab-6" role="tab" aria-controls="tab-6" aria-selected="false">MCITP</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-7-tab" data-toggle="pill"
+                            href="#tab-7" role="tab" aria-controls="tab-7" aria-selected="false">CCNP</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-8-tab" data-toggle="pill"
+                            href="#tab-8" role="tab" aria-controls="tab-8" aria-selected="false">MCTS</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-9-tab" data-toggle="pill"
+                            href="#tab-9" role="tab" aria-controls="tab-9" aria-selected="false">PET</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-10-tab" data-toggle="pill"
+                            href="#tab-10" role="tab" aria-controls="tab-10" aria-selected="false">FCE</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-11-tab" data-toggle="pill"
+                            href="#tab-11" role="tab" aria-controls="tab-11" aria-selected="false">KET</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-12-tab" data-toggle="pill"
+                            href="#tab-12" role="tab" aria-controls="tab-12" aria-selected="false">ILEC</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-13-tab" data-toggle="pill"
+                            href="#tab-13" role="tab" aria-controls="tab-13" aria-selected="false">CPE</a>
+
+                        <a class="nav-link p-3 border-bottom border-light" id="tab-14-tab" data-toggle="pill"
+                            href="#tab-14" role="tab" aria-controls="tab-14" aria-selected="false">YLE</a>
+
+
+
+                    </div>
+                </div>
+
+                <div class="col-9">
+                    <div class="tab-content" id="v-pills-tabContent">
+
+                        <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="tab-1-tab">
+
+                            <h2 class="font-weight-bold text-justify pb-5 text-center">IELTS</h2>
+
+                            <img src="../img/img23.jpg" class="img-fluid mb-5">
+                            <h3 class="font-weight-bold text-justify py-2">Buy Valid IELTS Certificate Online
+                                without Examination</h3>
+                            <p class="text-justify py-2">
+                                Are you a student? Do you really dream of having a career in the USA or other
+                                nations abroad? If your answer to these questions is yes, let you know that you have
+                                come to the right place. We at Sign Up for Verified Certificates let you purchase
+                                IELTS certificate online. Yes, you’ve heard it right. Not only this, you can
+                                purchase IELTS certificate without exam from us. We are a pioneer in this industry
+                                and have several years of experience in offering original IELTS certificate online.
+                                You not only get to buy IELTS certificate from us but also buy valid, original, and
+                                registered IELTS certificate that will help you to get a bright future.
+                            </p>
+                            <h3 class=" text-justify py-2">The Significance of Registered IELTS Certificate
+                            </h3>
+                            <p class="text-justify ">Before we start with the significance of original IELTS
+                                certificates, you should know about this certificate first. IELTS is one of the
+                                popular English language tests in the globe. It is the examination of your four
+                                skills – writing, speaking, listening, and reading. We provide IELTS certificate
+                                without exam and this implies that you can easily purchase IELTS certificate from
+                                us. This test needs you to study a lot. Once you come to us for help, we make it
+                                possible for you to Buy IELTS Certificate Online.</p>
+                            <p class="text-justify ">
+                                You don’t need to worry about the certificate’s quality since you can buy valid or
+                                original IELTS certificate. Once you Buy IELTS Certificate Online, you can easily
+                                get admission in any well-known university abroad and nobody can stop you from
+                                attaining your goals and dreams.</p>
+                            <h3 class="text-justify py-2">How can you Purchase Registered IELTS Certificate?</h3>
+                            <p class="text-justify py-2">In order to buy IELTS certificate, the very first thing
+                                that you require is to place an order. Once you place your order to purchase IELTS
+                                certificate online, we would send you the information, as well as the requirements
+                                that are needed to purchase IELTS certificate that too without examination. While
+                                receiving the needed documents and you clear the payment for IELTS registration
+                                process, we process your order. Once your order is processed, it doesn’t take time
+                                to get valid and registered IELTS certificate.
+                                attaining your goals and dreams.</p>
+                            <h3 class="text-justify py-2">Is the IELTS Certificate Without Test Valid?</h3>
+                            <p class="text-justify py-2"> While you purchase IELTS certificate online from us, keep
+                                in mind that they are exactly the same as the ones given by the authorities. You can
+                                stay worry-free when you choose us to buy IELTS certificate online. Our registered
+                                IELTS certificates are real.
+                                So, what are you waiting for? Contact us today.</p>
+
+                            <h3 class="font-weight-bold text-justify py-2">
+                                Reserve your seat</h3>
+                            <form method="post" action="" class="rounded-lg">
+
+                                <div class="form-group ">
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control" id="name" placeholder="John Doe">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">email</label>
+                                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                                </div>
+                                <div class="form-group">
+                                    <label for="subject">Subject</label>
+                                    <input type="email" class="form-control" id="subject" placeholder="IELTS ">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="message">Message</label>
+                                    <textarea class="form-control" id="message" rows="6"></textarea>
+                                </div>
+
+                                <div class="form-group">
+                                    <button class="submit btn btn-primary py-2 px-5" id="send">send</button>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby="tab-2-tab">
+                            2</div>
+
+                        <div class="tab-pane fade" id="tab-3" role="tabpanel" aria-labelledby="tab-3-tab">
+                            3</div>
+
+                        <div class="tab-pane fade" id="tab-4" role="tabpanel" aria-labelledby="tab-4-tab">
+                            4</div>
+
+                        <div class="tab-pane fade" id="tab-5" role="tabpanel" aria-labelledby="tab-5-tab">
+                            5</div>
+
+                        <div class="tab-pane fade" id="tab-6" role="tabpanel" aria-labelledby="tab-4-tab">
+                            6</div>
+
+                        <div class="tab-pane fade" id="tab-7" role="tabpanel" aria-labelledby="tab-4-tab">
+                            7</div>
+
+                        <div class="tab-pane fade" id="tab-8" role="tabpanel" aria-labelledby="tab-4-tab">
+                            8</div>
+
+                        <div class="tab-pane fade" id="tab-9" role="tabpanel" aria-labelledby="tab-9-tab">
+                            9</div>
+
+                        <div class="tab-pane fade" id="tab-10" role="tabpanel" aria-labelledby="tab-10-tab">
+                            10</div>
+
+                        <div class="tab-pane fade" id="tab-11" role="tabpanel" aria-labelledby="tab-11-tab">
+                            11</div>
+
+                        <div class="tab-pane fade" id="tab-12" role="tabpanel" aria-labelledby="tab-12-tab">
+                            12</div>
+
+                        <div class="tab-pane fade" id="tab-13" role="tabpanel" aria-labelledby="tab-13-tab">
+                            13</div>
+
+                        <div class="tab-pane fade" id="tab-14" role="tabpanel" aria-labelledby="tab-14-tab">
+                            14</div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
     <footer class="container-fluid bg-dark text-light text-center ">
         <div class="row">
