--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         online using the ORIGINAL IELTS TRF.</p>
                     <div class="row">
                         <div class="col-md-6">
-                            <p class="">
+                            <p class="font-weight-bold p-2">
                                 Fake Passport For Sale | Buy Real Nebosh Certificate | Buy Fake Certificates Online |
                                 Buy
                                 Fake Birth
@@ -249,7 +249,8 @@
                                 Certificate | Get Verified PTE | GMAT Certificates |</p>
                         </div>
                         <div class="col-md-6">
-                            <p class="">Buy Real Visa Online | Buy Nebosh IGC123 Without Test | Buy Real Documents
+                            <p class="font-weight-bold p-2">Buy Real Visa Online | Buy Nebosh IGC123 Without Test | Buy
+                                Real Documents
                                 Online |
                                 Buy Fake Death Certificate Online | Buy A Degree Certificate | Buy Ielts Certificate
                                 Online
